# ocot-tracer

./: CMakeLists.txt  Makefile  README.md  accelerator.cpp  analytic_direct.cpp  gpu.hpp  image.cpp  image.hpp  kdtree.cpp  parse_scene.cpp  parse_scene.hpp  path_tracer.hpp  path_tracer_gpu.cpp  ray_tracer.hpp
include/: accelerator.hpp  analytic_direct.hpp  direct_light.hpp  kdtree.hpp  primitive.hpp
src/: backup.cpp  direct_light.cpp  gpu.cu  main.cpp  path_tracer.cpp  primitive.cpp  ray_tracer.cpp
